syntax = "proto3";

// Public API for Hyades repository meta analysis.
package org.hyades.repometaanalysis.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.hyades.proto.repometaanalysis.v1";

message AnalysisCommand {
  // The component that shall be analyzed.
  Component component = 1;
}

message AnalysisResult {
  // The component this result is for.
  optional Component component = 1;

  // Identifier of the repository where the result was found.
  optional string repository = 2;

  // Latest version of the component.
  optional string latest_version = 3;

  // When the latest version was published.
  optional google.protobuf.Timestamp published = 4;

  optional IntegrityResult integrity_result = 5;
}

message IntegrityResult {
  // The uuid of the component for which the integrity check was done
  string uuid = 1;
  HashMatchStatus md5HashMatch = 2;
  HashMatchStatus sha1HashMatch = 3;
  HashMatchStatus sha256Match = 4;
  string url = 5;
  double componentId = 6;
}

enum HashMatchStatus {
  PASS = 0;
  FAIL = 1;
  UNKNOWN = 2;
  COMPONENT_MISSING_HASH = 3;
}
message Component {
  // Package URL of the component.
  string purl = 1;
  // Whether the component is internal to the organization.
  // Internal components will only be looked up in internal repositories.
  optional bool internal = 2;
  optional string md5Hash = 3;
  optional string sha1Hash = 4;
  optional string sha256Hash = 5;
  optional string uuid = 6;
  optional double componentId = 7;
}
